--- a/public/502.html
+++ b/public/502.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <head>
-	<title>Secret Hitler.io Maintenance</title>
+	<title>Secret Hitler Maintenance</title>
 	<style>
 		@media screen and (min-width: 1001px) {
 			body {
@@ -47,13 +47,12 @@
 </head>
 <body>
 	<article>
-		<h1>Secret Hitler.io is updating (or down temporarily)!</h1>
+		<h1>Secret Hitler is updating (or down temporarily)!</h1>
 		<div>
 			<p>
-				We should be back very soon! You can always check the status of the site in the #development-contribution channel on our
-				<a href="https://discord.gg/secrethitlerio">Discord Server</a>, otherwise check back shortly!
+				The game should be back very soon! If this seems unusual, there may be an issue with the underlying AHS server or Nitro. Please contact me.
 			</p>
-			<p>&mdash; coz (Site Admin)</p>
+			<p>&mdash; penguingeorge</p>
 		</div>
 	</article>
 </body>
