--- a/public/private-placeholder.html
+++ b/public/private-placeholder.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <head>
-	<title>SH.io - MOVED</title>
+	<title>Secret Hitler - MOVED</title>
 	<style>
 		@media screen and (min-width: 1001px) {
 			body {
@@ -47,17 +47,17 @@
 </head>
 <body>
 	<article>
-		<h1>This private-only Secret Hitler.io server is now permanently shut down.</h1>
+		<h1>This private-only Secret Hitler server is now permanently shut down.</h1>
 		<div>
 			<p>
 				Thanks everyone for the wave of traffic earlier last year! Now that traffic has come back to mostly normal levels, we're shutting down this (always
-				planned to be) temporary supplementary server. You can now head back to <a href="https://secrethitler.io">the main site</a>, and still enjoy the same
+				planned to be) temporary supplementary server. You can now head back to <a href="https://sh.nitro.wingless.co.uk">the main site</a>, and still enjoy the same
 				game there!
 			</p>
 			<code>Note: You will need to create an account on that site separately if you weren't on that site originally.</code>
 			<p>Thanks for sticking around!</p>
 			&nbsp;
-			<p>&mdash; SH.io</p>
+			<p>&mdash; penguingeorge</p>
 		</div>
 	</article>
 </body>
